--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,17 @@
 
     margin: 0;
     padding: 0;
-    box-sizing: border-box ;
+    box-sizing: border-box; 
+    font-family: 'Mulish', sans-serif;
+}
 
+a{
+
+    text-decoration: none;
+    color: white;
+}
+
+ul{
+
+    list-style: none;
 }
