--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer{
-
-    background-color: violet;
-    height: 21px;
+    text-align: center;
+    font-style: italic;
+    color: #fff;
 
 }
