--- a/css/body.css
+++ b/css/body.css
@@ -1,3 +1,8 @@
+html, body {
+    position: relative;
+    overflow: hidden;
+}
+
 body{
 
     height: 100vh;
@@ -8,6 +13,7 @@ body{
     display: flex;
     flex-direction: column;
     padding: 80px 128px 50px 128px;
+    animation: zoom 1.5s;
     
 
 }
@@ -16,8 +22,21 @@ body{
     body{
         padding: 30px 30px 25px 30px;
         background-image: url(../img/background.png);
-        background-color: #0009;
+        background-color: #0006;
         background-blend-mode: darken;
 
     }
 }
+
+
+@keyframes zoom{
+    0%{
+        transform: scale(3);
+    }
+    100%{
+        transform: scale(1);
+    }
+
+}
+
+/*@keyframes zoom é animação ao entrar no site, ou atualizar a página, o código está no body{ animation: zoom 1.5s}*/
